--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
-    "react-native-safe-area-context": "^4.7.1"
+    "react-native-dialog": "^9.3.0",
+    "react-native-safe-area-context": "^4.7.1",
+    "react-native-uuid": "^2.0.1",
+    "uuidv4": "^6.2.13",
+    "@react-native-async-storage/async-storage": "1.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
